<resources>
    <string name="app_name">PlayerCreator</string>
    <string name="players_list_string">Players</string>
    <string name="name_string">Name</string>
    <string name="class_string">Class</string>
    <string name="gender_string">Gender</string>
    <string name="create_string">Create</string>
    <string name="update_string">Update</string>
    <string name="delete_string">Delete</string>
    <string name="refresh_string">Refresh</string>
    <string name="player_creator_login">Player Creator Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="player_creator_register">Player Creator Register</string>
    <string name="full_name">Full name</string>
    <string name="email">email</string>
    <string name="health">Health</string>
    <string name="damage">Damage</string>
    <string name="defense">Defense</string>
    <string name="minusButton">-</string>
    <string name="plusButton">+</string>
    <string name="statPoint">stat</string>
    <string name="statPointText">Stat points:</string>
    <string name="play">Play</string>
    <string name="characters">Characters</string>
    <string name="create_character">Create character</string>
    <string name="XP">XP</string>
    <string name="placeholder">placeholder</string>
    <string name="back">Back to Main Menu</string>


</resources>