<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".character.StatPointManager$Characters">

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/characters"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.070" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/name_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.10" />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_string"
            android:layout_marginStart="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.100" />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_string"
            android:layout_marginStart="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.100" />

    <Spinner
            android:id="@+id/characterSpinner"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.700"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

    <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.962"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textviewXP"
            app:layout_constraintVertical_bias="0.909"/>
    <TextView
            android:id="@+id/textviewHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.100" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.135"/>
    <TextView
            android:id="@+id/textviewDamage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textviewHealth"
            app:layout_constraintVertical_bias="0.100" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.135"/>

    <TextView
            android:id="@+id/textviewDefense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defense"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textviewDamage"
            app:layout_constraintVertical_bias="0.100" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.135"/>

    <TextView
            android:id="@+id/textviewXP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/XP"
            app:layout_constraintTop_toBottomOf="@+id/textviewDefense" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.135" app:layout_constraintVertical_bias="0.100"/>
    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nameText"
            app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.100000024"/>
    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/classText"
            app:layout_constraintTop_toBottomOf="@+id/nameText"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintVertical_bias="0.1"/>
    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/genderText"
            app:layout_constraintTop_toBottomOf="@+id/classText"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.626"
            app:layout_constraintVertical_bias="0.101"/>
    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/healthText"
            app:layout_constraintTop_toBottomOf="@+id/genderText"
            app:layout_constraintStart_toEndOf="@+id/textviewHealth" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.1"/>
    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/damageText"
            app:layout_constraintStart_toEndOf="@+id/textviewDamage" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/healthText" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.478" app:layout_constraintVertical_bias="0.101"/>
    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/defenseText"
            app:layout_constraintStart_toEndOf="@+id/textviewDefense" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/damageText" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.478" app:layout_constraintVertical_bias="0.096"/>
    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/xpText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/defenseText" app:layout_constraintStart_toEndOf="@+id/textviewXP"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintVertical_bias="0.103"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp" android:id="@+id/backToMainBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:icon="?attr/homeAsUpIndicator" tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintVertical_bias="0.979"/>

</androidx.constraintlayout.widget.ConstraintLayout>